--- a/config/contractoverrideconfig.json
+++ b/config/contractoverrideconfig.json
@@ -19,6 +19,7 @@
         "FtsoRewardManager": "",
         "ValidatorRewardManager": "",
         "AddressBinder": "",
-        "RewardManager": ""
+        "RewardManager": "",
+        "PChainStakeMirror": ""
     }
 }
